maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: value Est is not a member of object plm.universe.Direction
    setDirection(Direction.Est);
                           ^JediEscaper:59: error: value Sud is not a member of object plm.universe.Direction
    setDirection(Direction.Sud);
                           ^JediEscaper:62: error: value Ouest is not a member of object plm.universe.Direction
    setDirection(Direction.Ouest);
                           ^JediEscaper:65: error: value Nord is not a member of object plm.universe.Direction
    setDirection(Direction.Nord);
                           ^